# QMS

./: .gitignore  ARCHITECTURAL_EXTRACTION_SUMMARY.md  CLAUDE.md  EXTRACTION_REPORT_07609_Mechanical.md  EXTRACTION_REPORT_07609_Plumbing_Mechanical.md  EXTRACTION_REPORT_Freshpet_Architectural_473-475.md  EXTRACTION_REPORT_Freshpet_Civil.md  EXTRACTION_REPORT_Freshpet_Civil_488-490.md  EXTRACTION_REPORT_Freshpet_Electrical.md  EXTRACTION_REPORT_Freshpet_R7005_R7006.md  EXTRACTION_REPORT_Freshpet_Refrigeration.md  EXTRACTION_SESSION_2026-02-19.md  EXTRACTION_STATUS_701-703.md  FRESHPET_EXTRACTION_REPORT.md  SIS QMS.url  __init__.py  __main__.py  architectural_extraction_results.json  bash.exe.stackdump  config.yaml  electrical_extraction.py  electrical_extraction_direct.py  extract_arch_sheets.py  extract_drawings.py  extract_electrical.py  extract_electrical_drawings.py  extract_electrical_final.py  extract_electrical_improved.py  extract_electrical_manual.py  extract_freshpet_arch.py  extract_freshpet_arch_simple.py  extract_freshpet_architectural.py  extract_freshpet_civil.py  extract_freshpet_electrical.py  extract_freshpet_pids.py  extract_freshpet_r7005_r7006.py  extract_freshpet_refrig.py  extract_freshpet_refrigeration.py  extract_freshpet_sections.py  extract_freshpet_sheets.py  (+34 more)
.paul/: STATE.md  (+18 more)
qms/: config.yaml  pyproject.toml
qms/.planning/: NEXT_STEPS.md  sharepoint-powerapp-integration.md  weld-cert-workflow.md
qms/cli/: __init__.py
qms/core/: config.py  logging.py  paths.py  schema.sql
qms/engineering/: __init__.py  cli.py  schema.sql  validators.py
(+568 files in other folders)
