[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qms"
version = "0.1.0"
description = "Quality Management System for MEP division"
requires-python = ">=3.11"
dependencies = [
    # CLI framework
    "typer>=0.9.0",
    "rich>=13.0",

    # Configuration
    "pyyaml>=6.0",

    # Data processing
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
pipeline = [
    # Vector DB & Embeddings
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # PDF Processing
    "PyMuPDF>=1.23.0",

    # AI/LLM
    "anthropic>=0.25.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
qms = "qms.cli.main:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["qms*"]

[tool.setuptools.package-data]
qms = ["config.yaml", "*/schema.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
